--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <li>HTML5 & CSS3</li>
                 <li>React / Vue.js</li>
                 <li>Node.js</li>
-                <li>Python</li>
                 <li>Git & GitHub</li>
+                <li>DevOps</li>
             </ul>
         </section>
         <section id="projects" class="container">
@@ -47,8 +47,7 @@
         </section>
         <section id="contact" class="container">
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:jakob.ahrens@email.com">jakob.ahrens@email.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/jakobahrens" target="_blank">linkedin.com/in/jakobahrens</a></p>
+            <p>Email: <a href="mailto:jakob.ahrens@posteo.de">jakob.ahrens@posteo.de</a></p>
         </section>
     </main>
     <footer>
